fixed spacing on category display

--- a/ResturantAGoGo/ClientApp/src/app/restaurant-all/restaurant-all.component.css
+++ b/ResturantAGoGo/ClientApp/src/app/restaurant-all/restaurant-all.component.css
@@ -8,12 +8,16 @@
 
 .card {
   float: left;
-  width: 100%;
+  width: 33rem;
   padding: .75rem;
-  height: 70vh;
+  height: 45vh;
   margin-bottom: 2rem;
   border: 0;
   box-shadow: 0px 0px 8px 0.3px rgba(104,111,240,1);
+}
+
+.card-text {
+  word-wrap: break-word;
 }
 
 .yelp-img {
@@ -40,5 +44,17 @@
 .horizontal {
   display: flex;
   justify-content: space-between;
+}
+
+.listHorizontal {
+  display: flex;
+  justify-content: normal;
+  list-style: none;
+}
+
+.restaurantcontainer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
 }
 
